# SQLExternalFileDetector

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
external_file_detection/: __init__.py  __main__.py  cli.py  external_file_detector.py  file_detector.py  gui.py  sql_generator.py  storage_handlers.py  vscode_bridge.py  web_gui.py  web_ui.py
external_file_detection/static/: app.js  style.css
external_file_detection/templates/: index.html
scripts/: generate_test_data.py
test_data/: README.md  customers_nested.json  deeply_nested.json  employees.csv  employees_wide.csv  european_sales.csv  events.jsonl  inventory.xlsx  large_logs.csv  messy_quoted.csv  no_header.csv  products_catalog.csv  sales_orders.csv  sales_transactions.parquet  sample.csv  sample.json  sample.parquet  sample.txt  sensor_readings.parquet  single_object.json  sparse_events.jsonl  transactions_pipe.csv  types_showcase.parquet  utf8_bom.csv  web_access_logs.tsv  windows1252.csv
test_data/delta_table/data/: part-00000-00000.snappy.parquet
test_data/iceberg_table/data/: 00000-0.parquet
test_data/iceberg_table/metadata/: v1.metadata.json
test_data/iceberg_versioned/data/: 00000-0.parquet
test_data/iceberg_versioned/metadata/: v1.metadata.json  v10.metadata.json
test_data/sample_orders.delta/: part-00000-574bcd76-03d5-4e51-a574-aba75f6ac27c-c000.snappy.parquet
tests/: conftest.py  test_cli.py  test_file_detector.py  test_integration.py  test_sql_generator.py  test_sql_injection.py  test_storage_handlers.py  test_web_gui.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: commands.ts  configuration.ts  extension.ts  pythonBridge.ts  sqlPreviewPanel.ts  treeDataProvider.ts
